# iuselinux

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.beads/: deletions.jsonl  issues.jsonl
imessage_gateway/: __init__.py  api.py  config.py  contacts.py  db.py  messages.py  sender.py
imessage_gateway/static/: app.js  index.html  styles.css
src/iuselinux/: __init__.py  api.py  config.py  contacts.py  db.py  sender.py  service.py  tray.py
src/iuselinux/static/: AppIcon.icns  app.js  error-no-access.html  index.html  styles.css
src/iuselinux/tui/: __init__.py  __main__.py  app.py  attachment_utils.py  client.py  image_renderer.py  models.py  styles.tcss  terminal_graphics.py  themes.py
src/iuselinux/tui/screens/: __init__.py  compose.py  home.py  search.py  settings.py
src/iuselinux/tui/widgets/: __init__.py  attachment.py  chat_list.py  footer.py  header.py  message_bubble.py  message_input.py  message_list.py
swift/: ContactLookup.swift  Makefile
tests/: test_api.py  test_attachment_utils.py  test_compose.py  test_config.py  test_contacts.py  test_db.py  test_image_renderer.py  test_search.py  test_service.py  test_terminal_graphics.py
