[project]
name = "imessage-gateway"
version = "0.1.0"
description = "Remote iMessage gateway for macOS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "pytest>=9.0.1",
]

[project.scripts]
imessage-gateway = "imessage_gateway.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
