[project]
name = "imessage-gateway"
version = "0.1.0"
description = "Remote iMessage gateway for macOS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "pillow>=12.0.0",
    "pillow-heif>=1.1.1",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "httpx>=0.28.0",
    "mypy>=1.14.0",
]

[project.scripts]
imessage-gateway = "imessage_gateway.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
